[tool.poetry]
name = "motorcycle-api"
version = "0.1.0"
description = ""
authors = ["Raphael Vasconcelos <raphael.vasconcelos01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.71.0"
pydantic = "^1.9.0"
uvicorn = "^0.17.0"
python-json-logger = "2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
httpx = "^0.21.3"
pytest-asyncio = "^0.17.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
